--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ plugins {
 }
 
 apply plugin: 'io.spring.dependency-management'
-
+apply plugin: "jacoco"
 group = 'com.pcyeon07'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
 
 repositories {
 	mavenCentral()
@@ -16,4 +17,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+
+jacocoTestCoverageVerification{
+	violationRules{
+		rule{
+			limit{
+				minimum=0.2
+			}
+		}
+	}
 }
